--- a/ankiweb_description.html
+++ b/ankiweb_description.html
@@ -21,51 +21,100 @@ Cloze one by one feature (built in to most note types):
 
 
 <b>Thank you</b>
+
 Huge thank you to @BlueGreenMagick, @Kleinerpirat, @RisingOrange, u/Ankiphil, and u/holythesea who have helped significantly with the development of these notes over the last few years
 
 <b>Problems, Bugs, Errors, Improvements</b>
+
 If you find a serious bug with the add-on, please submit it on <a href="https://github.com/AnKingMed/anking_notes_addon" rel="nofollow">Github</a> or email us at ankingmed@gmail.com. If you find any issues with the note types, please submit them on this <a href="https://github.com/AnKingMed/AnKing-Note-Types" rel="nofollow">github page</a>. Please remember that we are not coders and thus may not be able to provide support.
 
 <b>Changelog</b>
+
 2021-12-24: Initial Release (Merry Christmas and Happy Holidays!:)
+
 2021-12-28: Added 2.1.50 compatibility, including PyQt6
+
 2022-01-08: Fixed bug with checkboxes and added backwards compatibility to 2.1.36
+
 2022-01-16: Fixed another bug with checkboxes
+
 2022-01-30: Fixed a few bugs and added new note types. Added a new feature that allows for only seeing a certain number of levels of hierarchical tags. Moved Button order to Fields section and now includes all fields (even if they aren't a button). Now will not scroll to auto-revealed hints.
+
 2022-02-08: Few bug fixes. Added new feature to allow for customizing what button is used to open each button one at a time. Hint Hotkeys add-on is no longer needed
+
 2022-02-16: Fixed bugs with a couple of options not saving and an error that appeared for some Mac users when updating the note types
+
 2022-02-25: Fixed occasional crash when importing a collection file
+
 2022-03-29: Updated note types. Renamed Button Order to Field Order and moved it into the Fields section.
+
 2022-07-12: Now also updates AnkiHub-versions of the AnKing note types, as well as copies of the AnKing note types that have names like for example "AnKingOverhaul-7ra5q" (sometimes created by Anki when importing a deck).
+
 2022-07-14: Added option to convert note types like for example. "AnKingOverhaul-7ra5q" to "AnKingOverhaul" respectively. It is shown when opening the "AnKing Note Types" window when there are such note types in the collection.
+
 2022-07-22: Fixed a bug that was making Edit Field During Review Cloze incompatible with the IO-one by one note type. If you're still having problems, make sure to uncheck "One by one" in the Edit Field During Review Cloze config.    (This caused a bug so we temporarily rolled it back, working on a fix)
+
 2022-07-23: Fixed bug in IO-one by one note types.
 2022-07-25: Fixed error when reordering fields.
+
 2022-07-29: Fixed conflict with ReColor add-on and IO one by one notes
+
 2022-07-31: Added message about AnkiHub note type versions.
+
 2022-09-05: Updated the IO-one by one note types with the latest closet version (should fix some bugs)
+
 2022-10-13: Fixed problems with creating notes that use a IO-one by one note type
+
 2022-11-12: Adds auto direction for right to left languages and adds new styling for tables on the AnKingOverhaul note type
+
 2022-11-15: Add styling for tables on mobile in the AnKingOverhaul note type, made Extra field not appear until Cloze one by one toggles are all open and made it so the AMBOSS add-on can recognize words on Cloze one by one notes
+
 2022-11:21: Fix problem related to updates of AnkiHub note type versions
+
 2023-02-22: Fixed a bug in the IO one by one note type. Added ability to connect note type functions with the new AnkiMobile User Actions so you can use gamepads to interact with the notes
+
 2023-03-19: Fixed a formatting problem related to lists.
+
 2023-04-03: Updated the AnKingDerm note type. Reveal the Extra field and other auto reveal fields only after all one by one boxes have been toggled open.
+
 2023-04-06: Updates to the AnKingDerm note type. Added new Sketchy-Cloze note type
+
 2023-04-17: Update image width/height settings on the AnKingOverhaul note type
+
 2023-04-22: Updated the table styling for all note types (thanks to connwork!)
+
 2023-04-24: Now supports auto-revealing hint buttons on individual notes based on tags. Add tag "autoopen::Field_name" with _ in place of spaces
-2023-04-27: Now the note type update notification is also shown if you only have the AnkiHub version of a note type installed. Fixed tabs getting out of order in the config window.
+
+2023-04-27: Now the note type update notification is also shown if you only have the AnkiHub version of a note type installed. Fixed tabs getting out of order in the config window. Fix a bug that was making it so that hint button shortcuts weren't working
+
+2023-05-31: You can now right click on a note in the browser and there is an option to add the "autoopen" tag easily to any field you select. See the example <a href="https://github.com/AnKing-Memberships/anking_notes_addon/pull/21" rel="nofollow">here</a>
+
+2023-08-18: Update OME link on AnKingOverhaul note type
+
+2023-08-29: 1- Added ability to right click on an image and add a "blur" class (i.e. for explicit images). Images will unblur with click. 2- made it so cloze one by one cards will have a green cloze on the front side and be easier to identify. 3 - fixed autoopen not working on ankidroid
+
+2023-08-31: fixed bug where green clozes would persist
+
+2023-11-30: 1- Made blur image option work with remote images. 2- Added options to customize one-by-one cloze text/hint colors
+
+2023-12-02: 1- Updated closet to fix IO one by one not working. 2- Added night mode table styling to the AnKingOverhaul note type.
 
 Please consider checking out our:
+
 <a href="https://www.youtube.com/theanking/playlists" rel="nofollow">YouTube Channel</a>- <i>How to use Anki for beginners and advanced users.</i>
+
 <a href="https://www.instagram.com/ankingmed" rel="nofollow">Instagram</a>/<a href="https://www.facebook.com/ankingmed" rel="nofollow">Facebook</a>: <i>@Ankingmed</i>
+
 <a href="https://www.ankingmed.com" rel="nofollow">www.AnKingMed.com</a>- <i>Recommended add-ons, tutorials and more including <b>how to download 40+ add-ons in &lt; 5min</b></i>
-<a href="https://www.theanking.com/anking-memberships" rel="nofollow">Patreon</a>- <i>Support our work and <b>get individualized Anki help!</b></i>
+
+<a href="https://www.ankipalace.com/membership" rel="nofollow">Patreon</a>- <i>Support our work and <b>get individualized Anki help!</b></i>
 
 <a href="https://www.ankingmed.com" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/AnKing/AnKingSmall.png?raw=true"></a><a href="https://www.ankingmed.com" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/AnKing/TheAnKing.png?raw=true"></a>
-  <a href="https://www.facebook.com/ankingmed" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/FB.png?raw=true"></a>     <a href="https://www.instagram.com/ankingmed" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/Instagram.png?raw=true"></a>     <a href="https://www.youtube.com/theanking" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/YT.png?raw=true"></a>     <a href="https://www.tiktok.com/@ankingmed" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/TikTok.png?raw=true"></a>     <a href="https://www.twitter.com/ankingmed" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/Twitter.png?raw=true"></a>
+<a href="https://www.facebook.com/ankingmed" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/FB.png?raw=true"></a>
+<a href="https://www.instagram.com/ankingmed" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/Instagram.png?raw=true"></a>
+<a href="https://www.youtube.com/theanking" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/YT.png?raw=true"></a>
+<a href="https://www.tiktok.com/@ankingmed" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/TikTok.png?raw=true"></a>
+<a href="https://www.twitter.com/ankingmed" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/Social/Twitter.png?raw=true"></a>
+<a href="https://www.ankipalace.com/membership" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/AnKing/Patreon.jpg?raw=true"></a>
 
-<a href="https://www.theanking.com/anking-memberships" rel="nofollow"><img src="https://raw.githubusercontent.com/AnKingMed/My-images/master/AnKing/Patreon.jpg?raw=true"></a>
-
-<b>      Check out our <a href="https://www.theanking.com/anki-mastery-course/?utm_source=anking_notetypes&amp;utm_medium=anki_add-on_page&amp;utm_campaign=mastery_course" rel="nofollow">Anki Mastery Course</a>!</b>
+<b>      Check out our <a href="https://courses.ankipalace.com/?utm_source=anking_bg_add-on&amp;utm_medium=anki_add-on_page&amp;utm_campaign=mastery_course" rel="nofollow">Anki Mastery Course</a>!</b>
