--- a/ankiweb_description.html
+++ b/ankiweb_description.html
@@ -99,6 +99,8 @@ If you find a serious bug with the add-on, please submit it on <a href="https://
 
 2023-12-02: 1- Updated closet to fix IO one by one not working. 2- Added night mode table styling to the AnKingOverhaul note type.
 
+2023-12-03: Added mising options to customize one-by-one cloze text/hint colors in night mode
+
 Please consider checking out our:
 
 <a href="https://www.youtube.com/theanking/playlists" rel="nofollow">YouTube Channel</a>- <i>How to use Anki for beginners and advanced users.</i>
