--- a/ankiweb_description.html
+++ b/ankiweb_description.html
@@ -101,6 +101,8 @@ If you find a serious bug with the add-on, please submit it on <a href="https://
 
 2023-12-03: Added mising options to customize one-by-one cloze text/hint colors in night mode
 
+2023-12-06: Fixed potential issue with closet script not being updated
+
 Please consider checking out our:
 
 <a href="https://www.youtube.com/theanking/playlists" rel="nofollow">YouTube Channel</a>- <i>How to use Anki for beginners and advanced users.</i>
