--- a/ankiweb_description.html
+++ b/ankiweb_description.html
@@ -55,6 +55,7 @@ If you find a serious bug with the add-on, please submit it on <a href="https://
 2022-07-22: Fixed a bug that was making Edit Field During Review Cloze incompatible with the IO-one by one note type. If you're still having problems, make sure to uncheck "One by one" in the Edit Field During Review Cloze config.    (This caused a bug so we temporarily rolled it back, working on a fix)
 
 2022-07-23: Fixed bug in IO-one by one note types.
+
 2022-07-25: Fixed error when reordering fields.
 
 2022-07-29: Fixed conflict with ReColor add-on and IO one by one notes
@@ -102,6 +103,18 @@ If you find a serious bug with the add-on, please submit it on <a href="https://
 2023-12-03: Added mising options to customize one-by-one cloze text/hint colors in night mode
 
 2023-12-06: Fixed potential issue with closet script not being updated
+
+2024-01-19: Fix bug in Sketchy-Cloze note type front template
+
+2024-04-08: Add the AnKingAnkisthesia note type - Add a reset button for general settings - Fix cloze color when using b/u/i styling - Fix extra color when using italics styling - Add night mode tables to AnKingMCAT
+
+2024-04-18: Revert img max height/width for IO one by one to 100% - Change min-width of images in Extra field to 0%
+
+2024-05-21: Update OME field on the AnKingOverhaul note type. The AnKingOvherhaul tab is now right next to the General tab. Add tutorial video link.
+
+2024-06-10: Align ".mnemonics" class to center in the AnKing deck - Tweaked the CSS so tables keep their normal font style
+
+2024-7-18: Added the AnKingOverlapping notetype for overlapping clozes
 
 Please consider checking out our:
 
