--- a/src/anking_notetypes/note_types/AnKingAnkisthesia/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingAnkisthesia/Back Template.html
@@ -1,4 +1,4 @@
-<!-- version 60c5d0b -->
+<!-- version 05a3422 -->
  <script>
 // ##############  HINT REVEAL SHORTCUTS  ##############
 // Visit https://keycode.info/ to get the number/letter for the key you want to assign. 
@@ -68,7 +68,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
-    <img src="_Anking_v3.png"> Missed Questions
+    <img src="_Anking_v3.png"> Personal Notes
   </button>
   <div dir="auto" id="missed" class="hints" style="display: none;">{{edit:Missed Questions}}</div>
 </span>
@@ -88,7 +88,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-textbook" class="hintBtn" data-name="Textbook">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-textbook')"></a>
   <button id="button-textbook" class="button-general" onclick="toggleHintBtn('hint-textbook')">
-    <img src="_Anking_v3.png"> Textbook
+    <img src="_Anking_v3.png"> Personal Notes
   </button>
   <div dir="auto" id="textbook" class="hints" style="display: none;">{{edit:Textbook}}</div>
 </span>
@@ -98,7 +98,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-ar" class="hintBtn" data-name="Additional Resources">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-ar')"></a>
   <button id="button-ar" class="button-general" onclick="toggleHintBtn('hint-ar')">
-    <img src="_Anking_v3.png"> Additional Resources
+    <img src="_Anking_v3.png"> Personal Notes
   </button>
   <div dir="auto" id="additional" class="hints" style="display: none;">{{edit:Additional Resources}}</div>
 </span>
