--- a/src/anking_notetypes/note_types/Basic-AnKingLanguage/Back Template.html
+++ b/src/anking_notetypes/note_types/Basic-AnKingLanguage/Back Template.html
@@ -1,4 +1,4 @@
-<!-- version 60c5d0b -->
+<!-- version 05a3422 -->
 <script>
 // ##############  HINT REVEAL SHORTCUTS  ##############
 // All shortcuts will also open with "H" if using the Hint Hotkeys add-on 
@@ -64,7 +64,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-exp" class="hintBtn" data-name="Examples">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-exp')"></a>
   <button id="button-exp" class="button-general" onclick="toggleHintBtn('hint-exp')">
-    <img src="_Anking_v3.png"> Examples
+    <img src="_Anking_v3.png"> Definitions
   </button>
   <div dir="auto" id="examples" class="hints" style="display: none;">{{edit:Examples}}</div>
 </span>
@@ -74,7 +74,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-alt" class="hintBtn" data-name="Alternative Translations">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-alt')"></a>
   <button id="button-alt" class="button-general" onclick="toggleHintBtn('hint-alt')">
-    <img src="_Anking_v3.png"> Alternative Translations
+    <img src="_Anking_v3.png"> Definitions
   </button>
   <div dir="auto" id="alt" class="hints" style="display: none;">{{edit:Alternative Translations}}</div>
 </span>
