--- a/src/anking_notetypes/note_types/IO-one by one/Back Template.html
+++ b/src/anking_notetypes/note_types/IO-one by one/Back Template.html
@@ -1,4 +1,4 @@
-<!-- version 60c5d0b -->
+<!-- version 05a3422 -->
 <script>
 // ##############  OCCLUSION SHORTCUTS  ##############
 var RevealIncrementalShortcut = "N";
@@ -68,7 +68,7 @@ var numTagLevelsToShow = 0;
 <span id = "hint-ln" class="hintBtn" data-name="Personal Notes">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
-    <img src="_Anking_v3.png"> Personal Notes
+    <img src="_Anking_v3.png"> Extra
   </button>
   <div dir="auto" id="personal-notes" class="hints" style="display: none;">{{edit:Personal Notes}}</div>
 </span>
@@ -78,7 +78,7 @@ var numTagLevelsToShow = 0;
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
-    <img src="_Anking_v3.png"> Missed Questions
+    <img src="_Anking_v3.png"> Extra
   </button>
   <div dir="auto" id="missed-questions" class="hints" style="display: none;">{{edit:Missed Questions}}</div>
 </span>
