--- a/src/anking_notetypes/note_types/AnKing/Front Template.html
+++ b/src/anking_notetypes/note_types/AnKing/Front Template.html
@@ -1,4 +1,4 @@
-<!-- version 05a3422 -->
+<!-- version 25cee5d -->
 <div id="text">{{cloze:Text}}</div>
 
 <br>
@@ -251,8 +251,11 @@ if (typeof(window.Persistence) === 'undefined') {
       }
 
       if (autoflip && clozeOneByOneEnabled) {
-    // avoid flickering. Must unset this in the back.
-    document.getElementById("qa").style.display = "none";
+
+    if(window.pycmd || window.showAnswer) {
+        // avoid flickering. Must unset this in the back.
+        document.getElementById("qa").style.display = "none";
+    }
 
     if (window.pycmd) {
         pycmd("ans")
@@ -393,7 +396,7 @@ if (typeof(window.Persistence) === 'undefined') {
 </script>
 
 <!-- ANKING HYPERLINK IMAGE -->
-<a href="https://www.ankingmed.com"><img src="_AnKingRound.png" alt="The AnKing" id="pic"></a>
+<a href="https://www.ankingmed.com"><img src="_AnKingIcon.png" alt="The AnKing" id="pic"></a>
     
 <!-- CLICKABLE COLORFUL TAGS -->
 {{#Tags}}
