--- a/src/anking_notetypes/note_types/AnKingAnkisthesia/Front Template.html
+++ b/src/anking_notetypes/note_types/AnKingAnkisthesia/Front Template.html
@@ -1,4 +1,4 @@
-<!-- version 05a3422 -->
+<!-- version 25cee5d -->
 <div id="text">{{cloze:Text}}</div>
 
 <!-- ##############  Text-to-speech  ##############
@@ -121,7 +121,7 @@ var numTagLevelsToShow = 0;
 
 <!-- ANKING HYPERLINK IMAGE -->
 <div id="pic"><a href="https://www.ankingmed.com">
-    <img src="_AnKingRound.png" alt="The AnKing" style="height:50px;border:0;position:fixed;bottom:10px;right:10px;">
+    <img src="_AnKingIcon.png" alt="The AnKing" style="height:50px;border:0;position:fixed;bottom:10px;right:10px;">
 </a></div>
 
 <script>
