--- a/src/anking_notetypes/note_types/AnKingDerm/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingDerm/Back Template.html
@@ -1,4 +1,4 @@
-<!-- version 05a3422 -->
+<!-- version 25cee5d -->
 <script>
 // ##############  HINT REVEAL SHORTCUTS  ##############
 // All shortcuts will also open with "H" if using the Hint Hotkeys add-on 
@@ -119,7 +119,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-ln" class="hintBtn" data-name="Personal Notes">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
-    <img src="_Anking_v3.png"> Personal Notes
+    <img src="_AnKingRound.png" style="height:12px"> Personal Notes
   </button>
   <div dir="auto" id="notes" class="hints" style="display: none;">{{edit:Personal Notes}}</div>
 </span>
@@ -129,7 +129,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
-    <img src="_Anking_v3.png"> Personal Notes
+    <img src="_AnKingRound.png" style="height:12px"> Missed Questions
   </button>
   <div dir="auto" id="missed" class="hints" style="display: none;">{{edit:Missed Questions}}</div>
 </span>
@@ -139,7 +139,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-dp" class="hintBtn" data-name="DermPath">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-dp')"></a>
   <button id="button-dp" class="button-general" onclick="toggleHintBtn('hint-dp')">
-    <img src="_dermki_round.png" style="height:12px;"> Personal Notes
+    <img src="_dermki_round.png" style="height:12px"> DermPath
   </button>
   <div dir="auto" id="dermpath" class="hints" style="display: none;">{{edit:DermPath}}</div>
 </span>
@@ -149,7 +149,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-ds" class="hintBtn" data-name="Dermoscopy">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-ds')"></a>
   <button id="button-ds" class="button-general" onclick="toggleHintBtn('hint-ds')">
-    <img src="_dermki_round.png" style="height:12px;"> Personal Notes
+    <img src="_dermki_round.png" style="height:12px"> Dermoscopy
   </button>
   <div dir="auto" id="dermoscopy" class="hints" style="display: none;">{{edit:Dermoscopy}}</div>
 </span>
@@ -159,7 +159,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-ar" class="hintBtn" data-name="Additional Resources">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-ar')"></a>
   <button id="button-ar" class="button-general" onclick="toggleHintBtn('hint-ar')">
-    <img src="_dermki_round.png" style="height:12px;"> Dermnemonics
+    <img src="_dermki_round.png" style="height:12px"> Dermnemonics
   </button>
   <div dir="auto" id="additional" class="hints" style="display: none;">{{edit:Additional Resources}}</div>
 </span>
@@ -169,7 +169,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-vd" class="hintBtn" data-name="VisualDx">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-vd')"></a>
   <button id="button-vd" class="button-general" onclick="toggleHintBtn('hint-vd')">
-    <img src="_dermki_round.png" style="height:12px;"> DermatoGraphix
+    <img src="_dermki_round.png" style="height:12px"> DermatoGraphix
   </button>
   <div dir="auto" id="visualdx" class="hints" style="display: none;">{{edit:VisualDx}}</div>
 </span>
@@ -180,7 +180,6 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <div id="extra">{{edit:Extra}}</div>
 <br>{{/Extra}}
 
-<!-- #DermNet -->
 <!-- images from dermnet.nz -->
 {{#DermNet}}
 <p></p>
@@ -188,20 +187,17 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <a href="https://dermnetnz.org" style="font-size:8px; font-style:italic;">Above Image(s) provided courtesy of DermNetNZ.org</a>
 <hr>
 {{/DermNet}}
-<!-- /DermNet -->
 
-<!-- #Full Spectrum of Dermatology -->
 {{#Full Spectrum of Dermatology}}<p></p>
 <div id="fullspectrum">{{edit:Full Spectrum of Dermatology}}</div>
 {{/Full Spectrum of Dermatology}}
-<!-- /Full Spectrum of Dermatology -->
 
 
 {{#Textbook}}
 <span id = "hint-tx" class="hintBtn" data-name="Textbook">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-tx')"></a>
   <button id="button-tx" class="button-general" onclick="toggleHintBtn('hint-tx')">
-    <img src="_dermki_round.png" style="height:12px;"> Personal Notes
+    <img src="_dermki_round.png" style="height:12px"> Textbook
   </button>
   <div dir="auto" id="textbook" class="hints" style="display: none;">{{edit:Textbook}}</div>
 </span>
@@ -236,7 +232,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 
 <!-- ANKING HYPERLINK IMAGE -->
-<a href="https://www.ankingmed.com"><img src="_AnKingRound.png" alt="The AnKing" id="pic"></a>
+<a href="https://www.ankingmed.com"><img src="_AnKingIcon.png" alt="The AnKing" id="pic"></a>
 
 <!-- NOT-PERSISTING EVENT LISTENER -->
 <script>
