--- a/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
+++ b/src/anking_notetypes/note_types/AnKingOverhaul/Back Template.html
@@ -1,4 +1,4 @@
-<!-- version 05a3422 -->
+<!-- version 25cee5d -->
 <script>
 // ##############  HINT REVEAL SHORTCUTS  ##############
 // All shortcuts will also open with "H" if using the Hint Hotkeys add-on 
@@ -142,7 +142,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-ln" class="hintBtn" data-name="Lecture Notes">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-ln')"></a>
   <button id="button-ln" class="button-general" onclick="toggleHintBtn('hint-ln')">
-    <img src="_Anking_v3.png"> Lecture Notes
+    <img src="_AnKingRound.png" style="height:12px"> Lecture Notes
   </button>
   <div dir="auto" id="notes" class="hints" style="display: none;">{{edit:Lecture Notes}}</div>
 </span>
@@ -152,7 +152,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-mq" class="hintBtn" data-name="Missed Questions">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-mq')"></a>
   <button id="button-mq" class="button-general" onclick="toggleHintBtn('hint-mq')">
-    <img src="_Anking_v3.png"> Lecture Notes
+    <img src="_AnKingRound.png" style="height:12px"> Missed Questions
   </button>
   <div dir="auto" id="missed" class="hints" style="display: none;">{{edit:Missed Questions}}</div>
 </span>
@@ -162,7 +162,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-pat" class="hintBtn" data-name="Pathoma">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-pat')"></a>
   <button id="button-pat" class="button-general" onclick="toggleHintBtn('hint-pat')">
-    <img src="_pathoma.icon.png"> 
+    <img src="_pathoma.icon.png" style="height:12px"> 
   </button>
   <div dir="auto" id="pathoma" class="hints" style="display: none;">{{edit:Pathoma}}</div>
 </span>
@@ -176,7 +176,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 >
   <a href="#" class="hint" onclick="toggleHintBtn('hint-bb-links')"></a>
   <button id="button-bb-links" class="button-general" onclick="toggleHintBtn('hint-bb-links')">
-    <img src="_b&b.icon.png"> Boards and Beyond Links
+    <img src="_b&b.icon.png" style="height:12px"> Boards and Beyond Links
   </button>
   <div dir="auto" id="bnb-links" class="hints" style="display: none;"></div>
 </span>
@@ -186,7 +186,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-bb" class="hintBtn" data-name="Boards and Beyond">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-bb')"></a>
   <button id="button-bb" class="button-general" onclick="toggleHintBtn('hint-bb')">
-    <img src="_b&b.icon.png"> Lecture Notes
+    <img src="_b&b.icon.png" style="height:12px"> Boards and Beyond
   </button>
   <div dir="auto" id="bnb" class="hints" style="display: none;">{{edit:Boards and Beyond}}</div>
 </span>
@@ -206,7 +206,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 >
   <a href="#" class="hint" onclick="toggleHintBtn('hint-fa-links')"></a>
   <button id="button-fa-links" class="button-general" onclick="toggleHintBtn('hint-fa-links')">
-    <img src="_first-aid.icon_v2.1.png"> First Aid Links
+    <img src="_first-aid.icon_v2.1.png" style="height:12px"> First Aid Links
   </button>
   <div dir="auto" id="firstaid-links" class="hints" style="display: none;"></div>
 </span>
@@ -216,7 +216,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-fa" class="hintBtn" data-name="First Aid">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-fa')"></a>
   <button id="button-fa" class="button-general" onclick="toggleHintBtn('hint-fa')">
-    <img src="_first-aid.icon_v2.1.png"> Lecture Notes
+    <img src="_first-aid.icon_v2.1.png" style="height:12px"> First Aid
   </button>
   <div dir="auto" id="firstaid" class="hints" style="display: none;">{{edit:First Aid}}</div>
 </span>
@@ -226,7 +226,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-sketchy" class="hintBtn" data-name="Sketchy">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-sketchy')"></a>
   <button id="button-sketchy" class="button-general" onclick="toggleHintBtn('hint-sketchy')">
-    <img src="_sketchy.icon.png"> Lecture Notes
+    <img src="_sketchy.icon.png" style="height:12px"> Sketchy
   </button>
   <div dir="auto" id="sketchy" class="hints" style="display: none;">{{edit:Sketchy}}</div>
 </span>
@@ -236,7 +236,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-sketchy2" class="hintBtn" data-name="Sketchy 2">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-sketchy2')"></a>
   <button id="button-sketchy2" class="button-general" onclick="toggleHintBtn('hint-sketchy2')">
-    <img src="_sketchy.icon.png"> Lecture Notes
+    <img src="_sketchy.icon.png" style="height:12px"> Sketchy 2
   </button>
   <div dir="auto" id="sketchy2" class="hints" style="display: none;">{{edit:Sketchy 2}}</div>
 </span>
@@ -246,7 +246,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-sketchyextra" class="hintBtn" data-name="Sketchy Extra">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-sketchyextra')"></a>
   <button id="button-sketchyextra" class="button-general" onclick="toggleHintBtn('hint-sketchyextra')">
-    <img src="_sketchy.icon.png"> Lecture Notes
+    <img src="_sketchy.icon.png" style="height:12px"> Sketchy Extra
   </button>
   <div dir="auto" id="sketchyextra" class="hints" style="display: none;">{{edit:Sketchy Extra}}</div>
 </span>
@@ -256,7 +256,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-picmonic" class="hintBtn" data-name="Picmonic">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-picmonic')"></a>
   <button id="button-picmonic" class="button-general" onclick="toggleHintBtn('hint-picmonic')">
-    <img src="_picmonic.icon.png"> Lecture Notes
+    <img src="_picmonic.icon.png" style="height:12px"> Picmonic
   </button>
   <div dir="auto" id="picmonic" class="hints" style="display: none;">{{edit:Picmonic}}</div>
 </span>
@@ -266,7 +266,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-pixorize" class="hintBtn" data-name="Pixorize">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-pixorize')"></a>
   <button id="button-pixorize" class="button-general" onclick="toggleHintBtn('hint-pixorize')">
-    <img src="_pixorize.png"> Lecture Notes
+    <img src="_pixorize.png" style="height:12px"> Pixorize
   </button>
   <div dir="auto" id="pixorize" class="hints" style="display: none;">{{edit:Pixorize}}</div>
 </span>
@@ -276,7 +276,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-physeo" class="hintBtn" data-name="Physeo">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-physeo')"></a>
   <button id="button-physeo" class="button-general" onclick="toggleHintBtn('hint-physeo')">
-    <img src="_physeologo.icon.png"> 
+    <img src="_physeologo.icon.png" style="height:12px"> 
   </button>
   <div dir="auto" id="physeo" class="hints" style="display: none;">{{edit:Physeo}}</div>
 </span>
@@ -286,7 +286,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-bootcamp" class="hintBtn" data-name="Bootcamp">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-bootcamp')"></a>
   <button id="button-bootcamp" class="button-general" onclick="toggleHintBtn('hint-bootcamp')">
-    <img src="_bootcamp.png"> Lecture Notes
+    <img src="_bootcamp.png" style="height:12px"> Bootcamp
   </button>
   <div dir="auto" id="bootcamp" class="hints" style="display: none;">{{edit:Bootcamp}}</div>
 </span>
@@ -307,7 +307,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 <span id = "hint-ar" class="hintBtn" data-name="Additional Resources">
   <a href="#" class="hint" onclick="toggleHintBtn('hint-ar')"></a>
   <button id="button-ar" class="button-general" onclick="toggleHintBtn('hint-ar')">
-    <img src="_Anking_v3.png"> Lecture Notes
+    <img src="_AnKingRound.png" style="height:12px"> Additional Resources
   </button>
   <div dir="auto" id="additional" class="hints" style="display: none;">{{edit:Additional Resources}}</div>
 </span>
@@ -315,7 +315,7 @@ replace the arrows/dashes from the statement below with double curly brackets-->
 
 
 <!-- ANKING HYPERLINK IMAGE -->
-<a href="https://www.ankingmed.com"><img src="_AnKingRound.png" alt="The AnKing" id="pic"></a>
+<a href="https://www.ankingmed.com"><img src="_AnKingIcon.png" alt="The AnKing" id="pic"></a>
 
 <!-- NOT-PERSISTING EVENT LISTENER -->
 <script>
