--- a/src/anking_notetypes/note_types/AnKingOverlapping/Front Template.html
+++ b/src/anking_notetypes/note_types/AnKingOverlapping/Front Template.html
@@ -1,4 +1,4 @@
-<!-- version 05a3422 -->
+<!-- version 25cee5d -->
 <div id="text">{{cloze:Text}}</div>
 
 <br>
@@ -190,7 +190,7 @@ var numTagLevelsToShow = 0;
 
 
 <!-- ANKING HYPERLINK IMAGE -->
-<a href="https://www.ankingmed.com"><img src="_AnKingRound.png" alt="The AnKing" id="pic"></a>
+<a href="https://www.ankingmed.com"><img src="_AnKingIcon.png" alt="The AnKing" id="pic"></a>
 
 
 <script>
