--- a/src/anking_notetypes/note_types/Physeo-Cloze/Front Template.html
+++ b/src/anking_notetypes/note_types/Physeo-Cloze/Front Template.html
@@ -1,4 +1,4 @@
-<!-- version 05a3422 -->
+<!-- version 25cee5d -->
 <div id="text">{{cloze:Text}}</div>
 
 <br>
@@ -250,8 +250,11 @@ if (typeof(window.Persistence) === 'undefined') {
       }
 
       if (autoflip && clozeOneByOneEnabled) {
-    // avoid flickering. Must unset this in the back.
-    document.getElementById("qa").style.display = "none";
+
+    if(window.pycmd || window.showAnswer) {
+        // avoid flickering. Must unset this in the back.
+        document.getElementById("qa").style.display = "none";
+    }
 
     if (window.pycmd) {
         pycmd("ans")
